<resources>
    <string name="app_name">My Applications</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="enter_your_password_here">enter your password here</string>
    <string name="this_is_tranding_news">THIS IS TRANDING NEWS</string>
    <string name="this_is_kigali_city_in_rwanda">this is kigali city in Rwanda</string>
    <string name="graduation">GRADUATION</string>
    <string name="to_day_is_grwaduation_day_at_university_of_rwanda">To day is grwaduation day at university of Rwanda</string>
    <string name="kigali_city_RWANDA">KIGALI CITY</string>

</resources>
